--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.24.1",
     "three": "^0.163.0"
   },
   "devDependencies": {
