--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "portfolio",
-  "private": true,
+  "name": "portfolio-backend",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
