--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.1.3",
     "@react-three/drei": "^9.105.2",
     "@react-three/fiber": "^8.16.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
