--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.12",
     "react": "^18.2.0",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-responsive": "^10.0.0",
