--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@heroicons/react": "^2.1.3",
     "@react-three/drei": "^9.105.2",
     "@react-three/fiber": "^8.16.1",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.12",
     "react": "^18.2.0",
