--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "dotenv": "^16.4.5",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.2.12",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chrono": "^2.6.1",
     "react-dom": "^18.2.0",
